--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,13 @@
 {
-  "bypassToken": "8a5c5bd2e9f4a2bc1d3e6f9a0b2c4d5e",
-  "protectedPaths": ["/admin", "/configuracoes"]
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        }
+      ]
+    }
+  ]
 }
