--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,19 @@
         }
       ]
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/admin/cron/sync-produtos",
+      "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/admin/cron/refresh-tiny-token",
+      "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/admin/cron/sync-pedidos-updated",
+      "schedule": "0 */2 * * *"
+    }
   ]
 }
