fix: ajusta cron do Vercel para 1x/dia (plano Hobby)
- Remove crons frequentes do vercel.json (sync-produtos, sync-pedidos)
- Mantém apenas refresh-tiny-token 1x/dia
- Sincronização agora roda via Supabase pg_cron (sem limites)

--- a/vercel.json
+++ b/vercel.json
@@ -12,16 +12,8 @@
   ],
   "crons": [
     {
-      "path": "/api/admin/cron/sync-produtos",
-      "schedule": "0 */6 * * *"
-    },
-    {
       "path": "/api/admin/cron/refresh-tiny-token",
-      "schedule": "0 */6 * * *"
-    },
-    {
-      "path": "/api/admin/cron/sync-pedidos-updated",
-      "schedule": "0 */2 * * *"
+      "schedule": "0 0 * * *"
     }
   ]
 }
