--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "recharts": "^3.4.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.0.5",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
