--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@south-paw/react-vector-maps": "^3.2.0",
     "@supabase/supabase-js": "^2.81.1",
     "@svg-maps/brazil": "^1.0.0",
+    "dotenv": "^17.2.3",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.554.0",
