--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint app components --ext .ts,.tsx",
     "start": "next start",
     "sync:month": "tsx scripts/syncMonth.ts",
+    "sync:tiny-items": "tsx scripts/sync-tiny-items-since-nov.ts",
+    "fix:all-data": "tsx scripts/fix-all-data.ts",
     "db:migrate:city-uf": "psql $SUPABASE_DB_URL -f supabase/migrations/20251122143000_add_city_state_to_tiny_orders.sql",
     "db:backfill:city-uf": "tsx scripts/backfillCityState.ts",
     "generate:mapa-vendas": "tsx scripts/generateMapaVendas.ts",
