--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
   "crons": [
     {
       "path": "/api/admin/cron/refresh-tiny-token",
-      "schedule": "0 0 * * *"
+      "schedule": "0 */4 * * *"
     }
   ]
 }
