--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/supabase-js": "^2.81.1",
     "@svg-maps/brazil": "^1.0.0",
     "@tanstack/react-virtual": "^3.13.13",
+    "clsx": "^2.1.1",
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
     "html-to-image": "^1.11.13",
@@ -37,6 +38,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^3.4.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "use-debounce": "^10.0.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
