--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "lucide-react": "^0.554.0",
     "next": "^16.0.5",
     "node-fetch": "^2.7.0",
+    "overlayscrollbars": "^2.13.0",
+    "overlayscrollbars-react": "^0.5.6",
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
