--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@south-paw/react-vector-maps": "^3.2.0",
     "@supabase/supabase-js": "^2.81.1",
     "@svg-maps/brazil": "^1.0.0",
     "@tanstack/react-virtual": "^3.13.13",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-parse": "^6.1.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "html-to-image": "^1.11.13",
     "jspdf": "^3.0.4",
@@ -36,6 +39,7 @@
     "node-fetch": "^2.7.0",
     "overlayscrollbars": "^2.13.0",
     "overlayscrollbars-react": "^0.5.6",
+    "papaparse": "^5.5.3",
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -49,6 +53,7 @@
     "@next/bundle-analyzer": "^16.0.5",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.8.32",
