--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@south-paw/react-vector-maps": "^3.2.0",
     "@supabase/supabase-js": "^2.81.1",
     "@svg-maps/brazil": "^1.0.0",
