--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev --webpack",
     "dev:cron": "npx dotenv -e .env.local -- tsx scripts/devCronServer.ts",
     "dev:full": "concurrently \"npm run dev\" \"sleep 10 && npm run dev:cron\"",
-    "build": "next build --webpack",
+    "build": "next build",
     "lint": "eslint app components --ext .ts,.tsx",
     "test": "jest",
-    "start": "next start",
+    "start": "node .next/standalone/server.js",
     "sync:month": "tsx scripts/syncMonth.ts",
     "sync:tiny-items": "tsx scripts/sync-tiny-items-since-nov.ts",
     "fix:all-data": "tsx scripts/fix-all-data.ts",
