Update deploy workflow and dashboard styling
Add Hostinger deploy secret validation and standalone asset copy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,15 +7,34 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      DEPLOY_HOST: ${{ secrets.HOST_IP || secrets.HOSTINGER_HOST || secrets.SSH_HOST || secrets.SERVER_HOST }}
+      DEPLOY_PORT: ${{ secrets.HOST_PORT || '65002' }}
     steps:
+    - name: Validate SSH secrets
+      run: |
+        if [ -z "$DEPLOY_HOST" ]; then
+          echo "Missing deploy host. Set HOST_IP (preferred) or HOSTINGER_HOST/SSH_HOST/SERVER_HOST."
+          exit 1
+        fi
+        if [ -z "${{ secrets.HOST_USER }}" ]; then
+          echo "Missing HOST_USER secret."
+          exit 1
+        fi
+        if [ -z "${{ secrets.HOST_KEY }}" ]; then
+          echo "Missing HOST_KEY secret."
+          exit 1
+        fi
     - name: Deploy via SSH
       uses: appleboy/ssh-action@v1.0.3
       with:
-        host: ${{ secrets.HOST_IP }}
+        host: ${{ env.DEPLOY_HOST }}
         username: ${{ secrets.HOST_USER }}
         key: ${{ secrets.HOST_KEY }}
-        port: 65002 # Porta comum da Hostinger, ajuste se necessário via secret
+        port: ${{ env.DEPLOY_PORT }} # Porta comum da Hostinger, ajuste se necessário via secret
         script: |
+          export PATH="/opt/alt/alt-nodejs22/root/bin:$PATH"
+
           # Navegar para a pasta do projeto (ajuste o caminho se necessário)
           cd domains/gestao.ambientautilidades.com.br/public_html
           
@@ -27,10 +46,11 @@ jobs:
           
           # 3. Build Next.js
           npm run build
-          
-          # 4. Preparar arquivos standalone (Cópia obrigatória)
-          cp -r .next/static .next/standalone/.next/static
-          cp -r public .next/standalone/public
+        
+          # 4. Garantir assets no standalone (postbuild já faz isso)
+          mkdir -p .next/standalone/.next/static .next/standalone/public
+          cp -R .next/static/. .next/standalone/.next/static
+          cp -R public/. .next/standalone/public
           
           # 5. Reiniciar aplicação (Assumindo PM2 ou kill simples)
           # Tenta recarregar via PM2 se existir, ou mata o node
