--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,13 +30,14 @@ jobs:
         HOST_KEY: ${{ secrets.HOST_KEY }}
         HOST_KEY_B64: ${{ secrets.HOST_KEY_B64 }}
       run: |
+        KEY_PATH="$GITHUB_WORKSPACE/.ssh_deploy_key"
         if [ -n "$HOST_KEY_B64" ]; then
-          echo "$HOST_KEY_B64" | base64 -d > /tmp/deploy_key
+          echo "$HOST_KEY_B64" | base64 -d > "$KEY_PATH"
         else
-          printf '%s' "$HOST_KEY" > /tmp/deploy_key
+          printf '%s' "$HOST_KEY" > "$KEY_PATH"
         fi
-        chmod 600 /tmp/deploy_key
-        if ! ssh-keygen -y -f /tmp/deploy_key > /dev/null 2>&1; then
+        chmod 600 "$KEY_PATH"
+        if ! ssh-keygen -y -f "$KEY_PATH" > /dev/null 2>&1; then
           echo "Invalid SSH private key. Ensure HOST_KEY is the private key or set HOST_KEY_B64."
           exit 1
         fi
@@ -45,7 +46,7 @@ jobs:
       with:
         host: ${{ env.DEPLOY_HOST }}
         username: ${{ secrets.HOST_USER }}
-        key_path: /tmp/deploy_key
+        key_path: /github/workspace/.ssh_deploy_key
         port: ${{ env.DEPLOY_PORT }} # Porta comum da Hostinger, ajuste se necessário via secret
         script: |
           export PATH="/opt/alt/alt-nodejs22/root/bin:$PATH"
